# LimeReport

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .qmake.cache.in  .qmake.conf  .travis.yml  CMakeLists.txt  COPYING  LICENSE  OKQmAj.json  README.md  common.pri  common_BACKUP_946.pri  common_BASE_946.pri  common_LOCAL_946.pri  config.h.in  followTo.patch  initvars.pro  limereport.pri  limereport.pro  limereport_fr.ts  limereport_ru.qm  qzint.pri  report-lib.pri  report-lib_ru.ts
.github/workflows/: cmake.yml
Nouveau dossier/: lrbasedesignintf.cpp  lrgroupbands.cpp  lrreportrender.cpp  lrreportrender.h
cmake/modules/: GenerateVersionHeader.cmake
console/: CMakeLists.txt  console.pro  main.cpp
demo/r1/: mainwindow.cpp  mainwindow.h  mainwindow.ui  r1.pro
demo_r1/: CMakeLists.txt  demo_r1.pro  global.h  main.cpp  mainicon.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  r1.qrc
demo_r1/demo_reports/: 123.lrxml  BL détaillé.lrxml  DataSource_to_Column.lrxml  analysis.lrxml  categories.lrxml  change_alignment.lrxml  change_item_from_script.lrxml  change_lang_from_script.lrxml  db.sqlite3  demoReport1_report_header_group_subdetail.lrxml  demoReport1_report_header_group_subdetail_TOC.lrxml  demo_db.db  form.lrd  ladder.lrxml  lr_git_test.lrxml  northwind.db  simple_group.lrxml  simple_list.lrxml  template.lrxml  test_connection.lrxml  test_customers.lrxml  testqrcode.lrxml
demo_r1/demo_reports/1/: 111.lrxml  test_js.lrxml
demo_r1/demo_reports/1.4/: 1_simple_list.lrxml  2_simple_group.lrxml  3_memos_and_pictures.lrxml  4_nested_group.lrxml  5_dialogDemo.lrxml  6_change_page_margins_by_script.lrxml  7_change_subband_visibility_by_script.lrxml  demoDialog.ui
demo_r1/demo_reports/andrey/: northwind.db  test_dialog.lrxml
demo_r1/demo_reports/multimote/: db.sqlite3  test.lrxml
demo_r1/demo_reports/pu/: database.sql  database1.sql  mylite.py  out.db  test.lrxml  test1.lrxml  test_new.lrxml  test_new1.lrxml
demo_r1/demo_reports/test/: test.db  test.lrxml  test1.lrxml  test2.lrxml  test2_changed.lrxml  test3_changed.lrxml
demo_r2/: CMakeLists.txt  demo_r2.pro  demo_r2.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
demo_r2/demo_reports/: Facture.lrxml  categories.lrxml  change_item_from_script.lrxml
designer/: CMakeLists.txt  designer.pro  designersettingmanager.cpp  designersettingmanager.h  main.cpp  mainicon.rc
designer_plugin/: designer_plugin.pro  limereport.pri  lrdesignerplugin.cpp  lrdesignerplugin.h  main.cpp
docs/: Руководство пользователя.docx
include/: LRCallbackDS  LRScriptManager  lrcallbackdatasourceintf.h  lrdatasourceintf.h  lrdatasourcemanagerintf.h  lrglobal.cpp  lrglobal.h  lrpreviewreportwidget.h  lrrenderengine.h  lrreportdesignwindowintrerface.h  lrreportengine.h  lrscriptenginemanagerintf.h
lib/: .gitignore
limerender/: limerender.h  limerender.pri  limerender.pro  limerender_p.h  lrreportrender.cpp
limereport/: LRCallbackDS  LRDataManager  LimeReport  designer.pri  limereport.prf  limereport.pri  limereport.pro  limereport_ar.ts  limereport_es_ES.ts  limereport_fr.ts  limereport_ru.ts  limereport_zh.ts  lraboutdialog.cpp  lraboutdialog.h  lraboutdialog.ui  lraxisdata.cpp  lraxisdata.h  lrbanddesignintf.cpp  lrbanddesignintf.h  lrbandsmanager.cpp  lrbandsmanager.h  lrbasedesignintf.cpp  lrbasedesignintf.h  lrbasedesignintf_BACKUP_1195.cpp  lrcallbackdatasourceintf.h  lrcollection.h  lrcolorindicator.cpp  lrcolorindicator.h  lrdatadesignintf.cpp  lrdatadesignintf.h  lrdatasourceintf.h  lrdatasourcemanager.cpp  lrdatasourcemanager.h  lrdatasourcemanagerintf.h  lrdesignelementsfactory.h  lrdesignerplugininterface.h  lrexporterintf.h  lrexportersfactory.h  lrfactoryinitializer.cpp  lrfactoryinitializer.h  (+51 more)
limereport/bands/: lrdataband.cpp  lrdataband.h  lrgroupbands.cpp  lrgroupbands.h  lrpagefooter.cpp  lrpagefooter.h  lrpageheader.cpp  lrpageheader.h  lrreportfooter.cpp  lrreportfooter.h  lrreportheader.cpp  lrreportheader.h  lrsubdetailband.cpp  lrsubdetailband.h  lrtearoffband.cpp  lrtearoffband.h
limereport/base/: lrattribsabstractfactory.h  lrsimpleabstractfactory.h  lrsingleton.h
limereport/databrowser/: lrconnectiondialog.cpp  lrconnectiondialog.h  lrconnectiondialog.ui  lrdatabrowser.cpp  lrdatabrowser.h  lrdatabrowser.qrc  lrdatabrowser.ui  lrdatabrowsertree.cpp  lrdatabrowsertree.h  lrsqleditdialog.cpp  lrsqleditdialog.h  lrsqleditdialog.ui  lrvariabledialog.cpp  lrvariabledialog.h  lrvariabledialog.ui
limereport/dialogdesigner/: dialogdesigner.pri  dialogdesigner.qrc  lrdialogdesigner.cpp  lrdialogdesigner.h
lrdview/: MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui  XmlModel.cpp  XmlModel.h  lrdview.pro  main.cpp  mainicon.rc  object_script.lrdview.Debug  object_script.lrdview.Release
src/: acollection.cpp  areportpreviewwidget.h  lraboutdialog.cpp  lraboutdialog.h  lraboutdialog.ui  lrbanddesignintf.cpp  lrbanddesignintf.h  lrbandsmanager.cpp  lrbandsmanager.h  lrbasedesignintf.cpp  lrbasedesignintf.h  lrcallbackdatasourceintf.h  lrdatadesignintf.cpp  lrdatadesignintf.h  lrdatasourcemanager.cpp  lrdatasourcemanager.h  lrdatasourcemanagerintf.h  lrdesignelementsfactory.h  lrglobal.h  lrgroupfunctions.cpp  lrgroupfunctions.h  lritemdesignintf.cpp  lritemdesignintf.h  lrpagedesignintf.cpp  lrpagedesignintf.h  lrpageitemdesignintf.cpp  lrpageitemdesignintf.h  lrpreviewreportwindow.cpp  lrpreviewreportwindow.h  lrpreviewreportwindow.ui  lrreportdesignwidget.cpp  lrreportdesignwidget.h  lrreportdesignwindow.cpp  lrreportdesignwindow.h  lrreportengine.cpp  lrreportengine.h  lrreportengine_p.h  lrreportrender.cpp  lrreportrender.h  lrscriptenginemanager.cpp  (+12 more)
tests/: tests.pro  tst_callbackdstest.cpp
tools/: check_code_style.sh
translations/: limereport_ar.qm  limereport_ar.ts  limereport_es.qm  limereport_es.ts  limereport_es_ES.qm  limereport_es_ES.ts  limereport_fr.qm  limereport_fr.ts  limereport_pl.qm  limereport_pl.ts  limereport_ru.qm  limereport_ru.ts  limereport_zh.qm  limereport_zh.ts
(+292 files in other folders)
